<?xml version="1.0" encoding="utf-8"?>
<!-- Generates a common feeding, exercise, grooming, medication, or healthcare routine. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="@dimen/space_24">
        <com.google.android.material.button.MaterialButton android:id="@+id/cancel_button" style="@style/Widget.PetCare.Button.Text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_12" android:text="@string/routine_generator_title" android:textAppearance="?attr/textAppearanceHeadlineLarge" android:textColor="@color/on_surface" android:textStyle="bold" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_8" android:text="@string/routine_generator_subtitle" android:textAppearance="?attr/textAppearanceBodyLarge" android:textColor="@color/on_surface_variant" />
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/pet_layout" style="@style/Widget.PetCare.TextInput.Dropdown" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_24" android:hint="@string/select_pet"><com.google.android.material.textfield.MaterialAutoCompleteTextView android:id="@+id/pet_input" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="none" /></com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.checkbox.MaterialCheckBox android:id="@+id/feeding_check" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_18_dp" android:checked="true" android:text="@string/routine_feeding" />
        <com.google.android.material.checkbox.MaterialCheckBox android:id="@+id/exercise_check" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/routine_exercise" />
        <com.google.android.material.checkbox.MaterialCheckBox android:id="@+id/grooming_check" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/routine_grooming" />
        <com.google.android.material.checkbox.MaterialCheckBox android:id="@+id/medication_check" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/routine_medication" />
        <com.google.android.material.checkbox.MaterialCheckBox android:id="@+id/healthcare_check" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/routine_healthcare" />
        <com.google.android.material.button.MaterialButton android:id="@+id/generate_button" style="@style/Widget.PetCare.Button.Primary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_24" android:text="@string/generate_tasks" />
    </LinearLayout>
</ScrollView>
