<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/canvas"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/space_16"
    android:paddingTop="@dimen/space_12"
    android:paddingBottom="@dimen/space_12">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/location_picker_title"
        android:textAppearance="@style/TextAppearance.PC.Section" />
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:text="@string/pin_instruction"
        android:textAppearance="@style/TextAppearance.PetCare.Supporting" />

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_12" android:gravity="center_vertical"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.PetCare.TextInput"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1" android:hint="@string/search_place_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/picker_search_input"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:imeOptions="actionSearch" android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/picker_search_button"
            style="@style/Widget.PetCare.Button.Tonal"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:text="@string/search_place" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/picker_current_location_button"
        style="@style/Widget.PetCare.Button.Text"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/location_picker_current"
        app:icon="@drawable/ic_location" />

    <FrameLayout android:id="@+id/picker_map_frame"
        android:layout_width="match_parent" android:layout_height="0dp"
        android:layout_weight="1" android:layout_marginTop="@dimen/space_8">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="bottom|end" android:layout_margin="@dimen/space_8"
            android:background="@drawable/pc_bg_surface_18"
            android:padding="@dimen/space_4" android:text="@string/osm_attribution"
            android:textAppearance="@style/TextAppearance.PC.Meta" />
    </FrameLayout>

    <TextView android:id="@+id/picker_status"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:text="@string/location_picker_kathmandu"
        android:textAppearance="@style/TextAppearance.PetCare.Supporting" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/use_pin_button"
        style="@style/Widget.PetCare.Button.Primary"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:text="@string/use_this_pin" android:enabled="false" />
</LinearLayout>
